# dots-tts-mlx

./: .gitignore  LICENSE  README.md  pyproject.toml
dots_tts_mlx/: __init__.py  audiovae.py  chunking.py  cli.py  config.py  convert.py  dit.py  io_helper.py  layers.py  llm.py  loader.py  model.py  profile.py  quantize.py  semantic_encoder.py  speaker.py  text.py
scripts/: ab_incontext_prompt_scale.py  dots_enroll_mem_probe.py  eval_matrix_prompt_scale.py  gate_generate_long.py  gate_generate_long_retry.py  gate_meanflow_acceptance.py  gate_meanflow_long.py  gate_meanflow_parity.py  gate_meanflow_quant_long.py  gate_meanflow_quant_smoke.py  gate_streaming_e2e.py  gen_incontext_prefill_fixture.py  gen_meanflow_oracle_fixture.py  meanflow_mem_probe.py  prepare_reference.py
taylor.dtprofile/: cond.safetensors  profile.json
tests/: test_attention.py  test_audiovae_decode.py  test_audiovae_encode.py  test_chunk_health.py  test_chunking.py  test_cli_smoke.py  test_convert.py  test_dit_step.py  test_end_to_end.py  test_enroll.py  test_flow_solver.py  test_generate_long_retry.py  test_incontext_prefill_parity.py  test_llm.py  test_meanflow.py  test_onset.py  test_profile.py  test_quantize.py  test_semantic_encoder.py  test_speaker.py  test_streaming_decode.py  test_text.py  test_xvector_only_regression.py
tools/: oracle.py
